--- a/README
+++ b/README
@@ -4,4 +4,4 @@ RUSTY DONNA (work in progress)
 
 COPYRIGHT
 
-   Copyright (c) 2014-2015 Michael Dvorkin
+   Copyright (c) 2014-2015 by Michael Dvorkin. All Rights Reserved.
